k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: app
  name: app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    name: app
  type: ClusterIP
